uptdate carousel html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="images/image1.png" alt="Nouvelle fonctionnalité">
             <div class="content">
                 <h3>Nouvelle fonctionnalité</h3>
-                <p>Ajout d'un mode multijoueur considérablement amélioré, conçu pour offrir une expérience encore plus immersive et compétitive. Les joueurs peuvent désormais s'affronter dans des parties stratégiques captivantes, tout en gagnant des récompenses exclusives et des bonus spéciaux pour leurs performances. Ce nouveau mode promet de transformer le gameplay en une aventure inoubliable pour tous les passionnés.</p>
+                <p>Comming SOON : Ajout d'un mode multijoueur considérablement amélioré, conçu pour offrir une expérience encore plus immersive et compétitive. Les joueurs peuvent désormais s'affronter dans des parties stratégiques captivantes, tout en gagnant des récompenses exclusives et des bonus spéciaux pour leurs performances. Ce nouveau mode promet de transformer le gameplay en une aventure inoubliable pour tous les passionnés.</p>
             </div>
         </div>
         <button id="nextBtn" class="carousel-button right">&gt;</button>
