--- a/pages/singleplayer.html
+++ b/pages/singleplayer.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Ships</title>
     <link rel="stylesheet" href="../css/single_player.css">
+    <link rel="stylesheet" href="../css/media_query_single_player.css">
+    <link rel="stylesheet" href="../css/ship_placement.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -13,7 +16,6 @@
     <script src="../js/variables.js" defer></script>
     <script src="../js/bots.js" defer></script>
     <script src="../js/singleplayerGame.js" charset="utf-8" defer></script>
-    <script src="../js/multiplayerGame.js" charset="utf-8" defer></script>
     <script src="../js/shipPlacements.js" charset="utf-8" defer></script>
 
   </head>
