--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="nav ms-4">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Accueil</a>
+                    <a class="nav-link" href="/index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/singleplayer.html">Jouer</a>
